# tview

./: .gitignore  AUDIT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: indel_sorted.bam  indel_sorted.bam.bai  indel_test.sam  ref.fa  sample2.sam  sample2_sorted.bam  sample2_sorted.bam.bai
src/tview/: __init__.py  _version.py  bam.py  cli.py  config.py  fasta.py  models.py  palette.yaml  renderer.py  style.yaml  tview.py
tests/: conftest.py  test_bam.py  test_cli.py  test_config.py  test_fasta.py
